# home

./: README.md  agent.py  memory.py  planning.py  pyproject.toml  reflection.py  retrieval.py
src/generative_agents/: __init__.py  config.py  context_budget.py  dialogue.py  embeddings.py  llm_client.py  main.py  perception.py  prompt_templates.py  simulation.py
src/generative_agents/environment/: __init__.py  models.py  renderer.py
src/generative_agents/storage/: __init__.py  sqlite_store.py  vector_store.py
src/generative_agents/ui/: __init__.py  dashboard.py
tests/: test_perception.py  test_runtime_extensions.py
