[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generative-agents"
version = "0.1.0"
description = "Foundational scaffolding for a local generative agents runtime."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "ollama>=0.4.0",
  "chromadb>=0.5.0",
  "pydantic>=2.0.0",
  "numpy>=1.24.0",
  "Pillow>=10.0.0",
  "rich>=13.0.0",
  "aiosqlite>=0.20.0",
]

[project.scripts]
generative-agents = "generative_agents.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
